Add platformio option monitor_speed to allow 'pio device monitor' to view the serial output.

--- a/TTN_TTGOLora32_OTAA/platformio.ini
+++ b/TTN_TTGOLora32_OTAA/platformio.ini
@@ -11,5 +11,6 @@
 [env:heltec_wifi_lora_32]
 platform = espressif32
 board = heltec_wifi_lora_32
+monitor_speed=115200
 framework = arduino
 lib_deps = 562, 852
